@@ -40,7 +40,8 @@ extern MagickExport ChannelStatistics
   *GetImageChannelStatistics(const Image *,ExceptionInfo *);
 
 extern MagickExport Image
-  *AverageImages(const Image *,ExceptionInfo *);
+  *AverageImages(const Image *,ExceptionInfo *),
+  *MaximumIntensityProjectionImages(const Image *,ExceptionInfo *);
 
 extern MagickExport MagickBooleanType
   GetImageChannelExtrema(const Image *,const ChannelType,unsigned long *,
